[package]
name = "prequal-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
hdrhistogram = "7.5.4"
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
