[package]
name = "prequal-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
hdrhistogram = "7.5.4"
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json"]}
rand = "0.10.2"
rand_distr = "0.6.0"
libc = "0.2.186"
